--- a/_includes/block-cta-bar.html
+++ b/_includes/block-cta-bar.html
@@ -1,7 +1,8 @@
 <div class="block block-cta-bar">
   <div class="container">
     <div class="columns">
-        <div class="text">
+        <div class="column text">
+          <h2><span class="light">{{ section.headline }}</span></h2>
           <p>{{ section.content }}</p>
         </div>
         <div class="cta">
