--- a/_includes/block-footer-1.html
+++ b/_includes/block-footer-1.html
@@ -1,5 +1,12 @@
 <footer class="block block-footer-1">
   <div class="container">
     <p>{{ section.content }}</p>
+    <ul>
+      {% for link in section.links %}
+        <li>
+        <a href="{{link.url}}"><img src="{{link.icon}}" alt="{{link.alt_text}}"/></a> 
+        </li>
+      {% endfor %}
+    </ul>
   </div>
 </footer>
