--- a/_includes/block-footer-2.html
+++ b/_includes/block-footer-2.html
@@ -1,5 +1,9 @@
 <section class="block block-footer-2">
   <div class="container">
+    <div>
+    {{ section.content }}
+    </div>
+
     <div class="columns">
       <div class="column">
         <img src="{{ section.image }}" width="24" height="auto" alt="Logo">
