--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -12,7 +12,9 @@
         <li class="nav-item {% if page.url == nav_item.link %}active{% endif %}"><a href="{{ nav_item.link | relative_url }}">{{ nav_item.link_text }}</a></li>
         {% endfor %}
     </ul>
+    {% if section.cta %}
     <a class="button primary small block-header-2--cta" href="{{ section.cta.url | relative_url }}">{{ section.cta.button_text }}</a>
+    {% endif %}
   </nav>
 
 </header>
