--- a/_includes/block-blog-list.html
+++ b/_includes/block-blog-list.html
@@ -1,14 +1,17 @@
 <section class="blog-list">
-  <div class="grid">
-    <div class="unit whole">
-      <h1>{{ page.title }}</h1>
+  <div class="container">
       {% for post in site.posts %}
         <article class="post-preview">
-          <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
-          <time>{{ post.date | date: "%B %d, %Y" }}</time>
-          {{ post.excerpt }}
+          <div class="columns">
+            <div class="column text">
+              <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
+              <time>{{ post.date | date: "%B %d, %Y" }}</time>
+            </div>
+            <div class="column media">
+              {{ post.excerpt }}
+            </div>
+          </div>
         </article>
       {% endfor %}
-    </div>
   </div>
 </section>
