--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     <meta name="author" content="{{ site.author }}">
     <meta name="description" content="{{ site.description }}">
+    <link rel="stylesheet" href="{{ '/assets/css/colors.css' | relative_url }}"/>
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"/>
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}"/>
   </head>
