update rapid iteration section  (renamed to 'know thyself')

--- a/_includes/block-cta-bar.html
+++ b/_includes/block-cta-bar.html
@@ -6,10 +6,7 @@
           <p>{{ section.content }}</p>
         </div>
         <div class="cta">
-          <form action="https://formspree.io/{{ section.email_recipient }}" method="POST">
-            <input type="email" placeholder="your@email.com" class="inverted" name="_replyto">
-            <button type="submit" class="button primary inverted">Sign up</button>
-          </form>
+        <iframe src="https://adamking0126.substack.com/embed" width="500" height="150" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
   </div>
