--- a/_includes/block-feature-1.html
+++ b/_includes/block-feature-1.html
@@ -5,11 +5,15 @@
   <div class="container">
     <div class="columns">
       <div class="column text">
-        <h2><span class="light">{{ section.headline }}</span></h2>
+        <h2>{{ section.headline }}</h2>
         <p>{{ section.content }}</p>
         <ul>
           {% for element in section.details %}
-          <li><strong>{{ element.title }}:</strong>&nbsp;{{ element.text }}</li>
+            {% if element.text %}
+              <li><strong>{{ element.title }}:</strong>&nbsp;{{ element.text }}</li>
+            {% else %}
+              <li><strong>{{ element.title }}</strong></li>
+            {% endif %}
           {% endfor %}
         </ul>
       </div>
