build in public

--- a/_includes/block-one-column-1.html
+++ b/_includes/block-one-column-1.html
@@ -1,7 +1,7 @@
 <section id="{{ section.slug | slugify }}" class="block block-one-column-1">
   <div class="container">
     <div class="columns">
-      <div class="column">
+      <div class="column justify">
         <h2>{{ section.headline }}</h2>
           {% if section.content_file %}
             <div class="section-content_file">
