add AI slop images

--- a/_includes/block-feature-1.html
+++ b/_includes/block-feature-1.html
@@ -25,7 +25,7 @@
         {% endif %}
       </div>
       <div class="column media">
-        <img src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}" loading="lazy">
+        <img class="opacity-70" src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}" loading="lazy">
       </div>
     </div>
   </div>
