--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -121,3 +121,58 @@ div.section-content_file p {
   align-items: center;
   justify-content: center;  /* Add this */
 }
+
+.block-one-column-1 {
+  position: relative;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.block-one-column-1::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.85);
+}
+
+.block-one-column-1 .container {
+  position: relative;  /* keeps content above overlay */
+  z-index: 1;
+}
+
+.media img.opacity-70 {
+  opacity: 0.7;
+}
+
+
+.media img.opacity-80 {
+  opacity: 0.8;
+}
+
+.block-header-2--logo a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--color-black);
+}
+
+
+.block-header-2--logo img {
+  max-height: 40px;
+  max-height: 2.5rem;
+}
+
+.block-header-2 .nav-item {
+  display: inline-block;
+  list-style: none;
+  margin-right: 16px;
+  margin-right: 1rem;
+  font-size: 16px;
+  font-size: 1rem;
+}
