--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,8 @@
       {% include google-analytics.html %}
     {% endif %}
 
+    <link rel="icon" href="/uploads/images/logo.png" type="image/png">
+
     <link rel="stylesheet" href="{{ '/assets/css/colors.css' | relative_url }}"/>
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"/>
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}"/>
