--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -75,6 +75,12 @@ div.section-content_file {
   margin-bottom: 1rem;
 }
 
+/* div.section-content_file p:first-child::first-letter { */
+/*   float: left; */
+/*   font-size: 2.5em; */
+/*   margin-top: 0.15em; */
+/* } */
+
 div.section-content_file p {
   margin-bottom: 1rem;
 }
