--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <base href="{{ site.baseurl }}">
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     <meta name="author" content="{{ site.author }}">
-    <meta name="description" content="{{ site.description }} HELLO">
+    <meta name="description" content="{{ site.description }}">
 
     {% if site.google_analytics and site.google_analytics != "" %}
       {% include google-analytics.html %}
