--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,13 @@
+.block: {
+  padding: 64px 32px 0px 32px;
+  padding: 4rem 2rem 0rem 2rem;
+}
+@media screen and (min-width: 700px) {
+  .block {
+    padding: 6rem 4rem 0 4rem;
+  }
+}
+
 .blog-list .columns {
   display: flex;
   flex-wrap: wrap;
