--- a/_includes/block-blog-post-content.html
+++ b/_includes/block-blog-post-content.html
@@ -2,8 +2,15 @@
   <div class="container">
     <div class="grid">
       <div class="unit whole">
-        <h1>{{ page.title }}</h1>
-        <time>{{ page.date | date: "%B %d, %Y" }}</time>
+        <div class="page-title">
+          <h1>{{ page.title }}</h1>
+          <time><em>{{ page.date | date: "%B %d, %Y" }}</em></time>
+        </div>
+          <div class="column media">
+            {% if page.images.hero %}
+              <img class="page-hero opacity-70" src="{{ page.images.hero | relative_url }}" alt="{{ page.title }}">
+            {% endif %}
+          </div>
         {{ content }}
       </div>
     </div>
