update head.html to show canonical link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,5 +18,8 @@
     <link rel="stylesheet" href="{{ '/assets/css/colors.css' | relative_url }}"/>
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"/>
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}"/>
+    {% if page.canonical_url %}
+      <link rel="canonical" href="{{ page.canonical_url }}" />
+    {% endif %}
   </head>
   <body>
