--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}"/>
     {% if page.canonical_url %}
       <link rel="canonical" href="{{ page.canonical_url }}" />
+    {% else %}
+      <link rel="canonical" href="https://flogger.io{{ page.url }}" />
     {% endif %}
   </head>
   <body>
