--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -70,7 +70,8 @@ div.page-title h1 {
 }
 
 .block-post-content p {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 /* Keep list items aligned within container */
