--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,11 @@ p {
   font-weight: 400;
   color: var(--color-text-medium);
 }
+
+ol {
+  padding: 1rem;
+}
+
 @media screen and (min-width: 700px) {
   h1 {
     font-size: 3.5rem;
